--- a/translation/dest/site/af-ZA.xml
+++ b/translation/dest/site/af-ZA.xml
@@ -30,10 +30,10 @@
 	<string name="createAGame">Skep \'n spel</string>
 	<string name="whiteIsVictorious">Wit het gewen</string>
 	<string name="blackIsVictorious">Swart het gewen</string>
-	<string name="xIsVictorious">%s is victorious</string>
+	<string name="xIsVictorious">%s het gewen</string>
 	<string name="youPlayTheWhitePieces">Jy speel met die wit stukke</string>
 	<string name="youPlayTheBlackPieces">Jy speel met die swart stukke</string>
-	<string name="youPlayAsX">You play as %</string>
+	<string name="youPlayAsX">Jy speel met die %s stukke</string>
 	<string name="itsYourTurn">Dit is jou beurt!</string>
 	<string name="cheatDetected">Cheat Detected</string>
 	<string name="variantEnding">Variant geëindig</string>
@@ -60,7 +60,7 @@
 	<string name="xResigned">%s resigned</string>
 	<string name="whiteLeftTheGame">Wit het die spel verlaat</string>
 	<string name="blackLeftTheGame">Swart het die spel verlaat</string>
-	<string name="xLeftTheGame">%s left the game</string>
+	<string name="xLeftTheGame">%s het die spel verlaat</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Deel die URL vir toeskouers</string>
 	<string name="theComputerAnalysisHasFailed">Die rekenaar analise het misluk</string>
 	<string name="viewTheComputerAnalysis">Beskou die rekenaar analise</string>
@@ -209,10 +209,10 @@
 	<string name="drawOfferCanceled">Gelykop aanbod gekanselleer</string>
 	<string name="whiteOffersDraw">Wit maak gelykspel aanbod</string>
 	<string name="blackOffersDraw">Swart maak gelykspel aanbod</string>
-	<string name="xOffersDraw">%s offers draw</string>
+	<string name="xOffersDraw">%s maak gelykspel aanbod</string>
 	<string name="whiteDeclinesDraw">Wit wys gelykspel aanbod van die hand</string>
 	<string name="blackDeclinesDraw">Swart wys gelykspel aanbod van die hand</string>
-	<string name="xDeclinesDraw">%s declines draw</string>
+	<string name="xDeclinesDraw">%s wys gelykspel aanbod van die hand</string>
 	<string name="yourOpponentOffersADraw">Jou teenstander bied gelykop aan</string>
 	<string name="accept">Aanvaar</string>
 	<string name="decline">Verwerp</string>
@@ -236,7 +236,7 @@
 	<string name="rematchOfferSent">Speel weer aanbod gestuur</string>
 	<string name="rematchOfferSentWhite">Wit daag jou weer uit</string>
 	<string name="rematchOfferSentBlack">Swart daag jou weer uit</string>
-	<string name="rematchOfferSentX">%s offers rematch</string>
+	<string name="rematchOfferSentX">%s daag jou weer uit</string>
 	<string name="rematchOfferAccepted">Speel weer aanbod aanvaar</string>
 	<string name="rematchOfferCanceled">Speel weer aanbod gekanselleer</string>
 	<string name="rematchOfferDeclined">Speel weer aanbod afgewys</string>
@@ -348,7 +348,7 @@
 	<string name="save">Stoor</string>
 	<string name="leaderboard">Leierbord</string>
 	<string name="selectHandicap">Select handicap</string>
-	<string name="pasteTheSfenStringHere">Paste the SFEN text here</string>
+	<string name="pasteTheSfenStringHere">Plak die SFEN string hier</string>
 	<string name="pasteTheKifCsaStringHere">Paste the KIF or CSA text here</string>
 	<string name="fromPosition">Van posisie</string>
 	<string name="default">Default</string>
@@ -367,7 +367,7 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="notACheckmate">Nie skaakmat nie</string>
 	<string name="whiteCheckmatesInOneMove">Wit om te skaakmat in een skuif</string>
 	<string name="blackCheckmatesInOneMove">Swart om te skaakmat in een skuif</string>
-	<string name="xCheckmatesInOneMove">%s to checkmate in one move</string>
+	<string name="xCheckmatesInOneMove">%s om te skaakmat in een skuif</string>
 	<string name="retry">Probeer weer</string>
 	<string name="reconnecting">Konnekteer weer</string>
 	<plurals name="nbFriendsOnline">
@@ -415,7 +415,7 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="advancedSettings">Gevorderde instellings</string>
 	<string name="safeTournamentName">Kies \'n baie veilige naam vir die toernooi.</string>
 	<string name="inappropriateNameWarning">Enige iets ongepaste kan maak dat jou rekening gesluit word.</string>
-	<string name="emptyTournamentName">Leave empty to name the tournament after a notable shogi player.</string>
+	<string name="emptyTournamentName">Laat leeg om die toernooi na \'n noemenswaardige speler te vernoem.</string>
 	<string name="recommendNotTouching">Ons stel voor om hierdie uit te los.</string>
 	<string name="fewerPlayers">As jy die aansluitings vereistes verstel, sal jou toernooi minder spelers hê.</string>
 	<string name="showAdvancedSettings">Wys gevorderde instellings</string>
@@ -438,7 +438,7 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="movesPlayed">Skuiwe gespeel</string>
 	<string name="whiteWins">Gewen deur wit</string>
 	<string name="blackWins">Gewen deur swart</string>
-	<string name="xWins">%s wins</string>
+	<string name="xWins">%s gewen</string>
 	<string name="draws">Gelykop gespeel</string>
 	<string name="nextXTournament">Volgende %s toernooi:</string>
 	<string name="averageOpponent">Gemmidelde opponent</string>
@@ -703,7 +703,7 @@ Jou verslag sal vinniger geantwoord word as dit in Engels geskryf is.</string>
 	<string name="ifYouDoNotSeeTheEmailCheckOtherPlaces">As jy nie die e-pos sien nie, kyk na ander plekke waar dit kan wees, soos jou gemorspos, sosiaal en ander leêrs.</string>
 	<string name="weHaveSentYouAnEmailTo">Ons het \'n e-pos na %s gestuur. Klik die skakel in die e-pos om die wagwoord te herstel.</string>
 	<string name="byRegisteringYouAgreeToBeBoundByOur">Deur te regisreer, stem jy in om aan ons %s gebonde te wees.</string>
-	<string name="networkLagBetweenYouAndLishogi">Network lag between you and Lishogi</string>
+	<string name="networkLagBetweenYouAndLishogi">Netwerk lag tussen jou en Lishogi</string>
 	<string name="timeToProcessAMoveOnLishogiServer">Time to process a move on Lishogi\'s server</string>
 	<string name="downloadAnnotated">Laai geannoteerde af</string>
 	<string name="downloadRaw">Laai rou af</string>
@@ -782,7 +782,7 @@ Jou verslag sal vinniger geantwoord word as dit in Engels geskryf is.</string>
 	<string name="chessBasics">Shogi basics</string>
 	<string name="shogiResources">Shogi resources</string>
 	<string name="coaches">Afrigters</string>
-	<string name="invalidKif">Invalid KIF</string>
+	<string name="invalidKif">Ongeldige KIF</string>
 	<string name="invalidNotation">Invalid notation</string>
 	<string name="invalidFen">Ongeldige FEN</string>
 	<string name="error.minLength">Minimum lengte is %s</string>
@@ -811,7 +811,7 @@ Jou verslag sal vinniger geantwoord word as dit in Engels geskryf is.</string>
 	<string name="evaluatingYourMove">Jou skuif word geëvalueer ...</string>
 	<string name="whiteWinsGame">Wit wen</string>
 	<string name="blackWinsGame">Swart wen</string>
-	<string name="xWinsGame">%s wins</string>
+	<string name="xWinsGame">%s gewen</string>
 	<string name="learnFromYourMistakes">Leer uit jou foute</string>
 	<string name="learnFromThisMistake">Leer uit hierdie fout</string>
 	<string name="skipThisMove">Slaan hierdie skuif oor</string>
@@ -836,7 +836,7 @@ Jou verslag sal vinniger geantwoord word as dit in Engels geskryf is.</string>
 	<string name="doItAgain">Doen dit weer</string>
 	<string name="reviewWhiteMistakes">Hersien wit se foute</string>
 	<string name="reviewBlackMistakes">Hersien swart se foute</string>
-	<string name="reviewXMistakes">Review %s mistakes</string>
+	<string name="reviewXMistakes">Hersien %s se foute</string>
 	<string name="advantage">Voordeel</string>
 	<plurals name="nbSeconds">
 		<item quantity="one">%s sekonde</item>
