--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -209,6 +209,7 @@
   <string name="forgotPassword">Forgot password?</string>
   <string name="error.weakPassword">This password is extremely common, and too easy to guess.</string>
   <string name="error.namePassword">Please don't use your username as your password.</string>
+  <string name="blankedPassword">You have used the same password on another site, and that site has been compromised. To ensure the safety of your Lichess account, we need you to set a new password. Thank you for your understanding.</string>
   <string name="youAreLeavingLichess">You are leaving Lichess</string>
   <string name="neverTypeYourPassword">Never type your Lichess password on another site!</string>
   <string name="passwordSuggestion">Do not set a password suggested by someone else. They will use it to steal your account.</string>
