--- a/translation/dest/faq/ro-RO.xml
+++ b/translation/dest/faq/ro-RO.xml
@@ -16,6 +16,8 @@
   <string name="otherWaysToHelp">alte feluri de a ajuta</string>
   <string name="areThereWebsitesBasedOnLichess">Există websiteuri bazate pe Lichess?</string>
   <string name="yesLichessInspiredOtherOpenSourceWebsites">Da. Lichess a inspirat într-adevăr alte websiteuri open-source care folosesc %1$s, %2$s sau %3$s.</string>
+  <string name="keyboardShortcuts">Ce comenzi rapide de la tastatură există?</string>
+  <string name="keyboardShortcutsExplanation">Unele pagini Lichess au comenzi rapide de tastatură pe care le puteți folosi. Încercați să apăsați tasta \'?\' la un studiu, analiză, puzzle sau în pagina jocului pentru a afișa scurtăturile de tastatură disponibile.</string>
   <string name="fairPlay">Joc Corect</string>
   <string name="whenAmIEligibleRatinRefund">Cănd sunt eligibil să primesc automat înapoi scorul pierdut din cauza cheaterilor?</string>
   <string name="ratingRefundExplanation">La un minut după ce un jucător este marcat, ultimele lor 40 de partide oficiale din ultimele 3 zile sunt ascunse. Daca ai fost oponentul lui în aceste meciuri, ai pierdut scor (datorită unei înfrângeri sau a unei remize), și scorul tau nu a fost provizoriu, o sa îți iei punctele înapoi. Înapoierea punctelor este limitată pe baza la cat scor ai făcut maxim și progresul în scor după partidă.  (De exemplu, daca scorul tău a crescut drastic după acele meciuri, este posibil să nu ți se înapoieze sau să ți se înapoieze parțial.) Nu ți se va înapoia niciodată mai mult de 150 puncte.</string>
