--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -391,6 +391,7 @@
   <string name="importGame">Import game</string>
   <string name="importGameExplanation">Paste a game PGN to get a browsable replay,
 computer analysis, game chat and shareable URL.</string>
+  <string name="importGameCaveat">Variations will be erased. To keep them, import the PGN through a %s.</string>
   <plurals name="nbImportedGames">
     <item quantity="one">%s imported game</item>
     <item quantity="other">%s imported games</item>
