--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -938,4 +938,5 @@ Leave empty to start games from the normal initial position.</string>
   <string name="lichessDbExplanation">Rated games played on Lichess</string>
   <string name="switchSides">Switch sides</string>
   <string name="closingAccountWithdrawAppeal">Closing your account will withdraw your appeal</string>
+  <string name="ourEventTips">Our tips for organising events</string>
 </resources>
